[gd_scene load_steps=2 format=3 uid="uid://pgevhmq3ljqt"]

[ext_resource type="Script" uid="uid://q1x2i0rvqgdx" path="res://src/ui/player_stats.gd" id="1_ogo65"]

[node name="PlayerStats" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ogo65")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 56.0
offset_bottom = 66.0

[node name="HealthValue" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "30"
fit_content = true

[node name="ExperienceValue" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "0"
fit_content = true
